# umoria-rust

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  MODULE_MAP  Makefile  README.md  clippy.toml  deny.toml  dist-workspace.toml  game.sav
.github/: cargo-dist-build-setup.yml
.github/workflows/: ci.yml  deploy.yml  release.yml
data/: death_royal.txt  death_tomb.txt  help.txt  help_wizard.txt  rl_help.txt  rl_help_wizard.txt  splash.txt  versions.txt  welcome.txt
launcher/: Cargo.toml  build.rs
launcher/reference/: launch.sh
launcher/src/: main.rs
scripts/: check.sh  check_refcell_nests.sh
src/: character.rs  config.rs  data_creatures.rs  data_player.rs  data_recall.rs  data_store_owners.rs  data_stores.rs  data_tables.rs  data_treasure.rs  dice.rs  dungeon.rs  dungeon_generate.rs  dungeon_los.rs  dungeon_tile.rs  entry.rs  game.rs  game_death.rs  game_files.rs  game_objects.rs  game_run.rs  game_save.rs  helpers.rs  identification.rs  identification_desc.rs  inventory.rs  lib.rs  mage_spells.rs  main.rs  monster.rs  monster_manager.rs  player.rs  player_bash.rs  player_eat.rs  player_magic.rs  player_move.rs  player_pray.rs  player_quaff.rs  player_run.rs  player_stats.rs  player_throw.rs  (+17 more)
tests/: character.rs  data_creatures.rs  data_player.rs  data_recall.rs  data_store_owners.rs  data_stores.rs  data_structs.rs  data_treasure.rs  dungeon.rs  dungeon_generate_level.rs  dungeon_generate_primitives.rs  dungeon_generate_rooms.rs  dungeon_generate_tunnels.rs  dungeon_los.rs  entry.rs  game.rs  game_death.rs  game_files.rs  game_objects.rs  game_run_commands.rs  game_run_dungeon.rs  game_run_init.rs  game_run_upkeep.rs  game_save_load.rs  game_save_stream.rs  game_save_write.rs  game_state.rs  harness_smoke.rs  helpers.rs  identification.rs  identification_desc.rs  integration.rs  inventory.rs  mage_spells.rs  monster_ai.rs  monster_death.rs  monster_manager.rs  monster_melee.rs  monster_spells.rs  monster_turn.rs  (+115 more)
tests/common/: mod.rs
tests/fixtures/game_files/: fgets_fixture.txt  wiz-out.
tests/golden/: item_desc_capture.txt  manifest.json  verify.sh
tests/golden/checks/: 01_build_ref.sh  02_rng_z10001.sh  03_rng_sequences.sh  04_normal_table.sh  05_save_goldens.sh  06_score_goldens.sh  07_transcript_capture.sh  08_manifest.sh
tests/golden/identification/: magic_init_seed1.txt  magic_init_seed12345.txt  magic_init_seed1700000000.txt  magic_init_seed42.txt
tests/golden/rng/: normalDist_seed12345.txt  normalDist_seed2147483647.txt  normalDist_seed42.txt  normal_table.txt  randomNumber_seed1.txt  randomNumber_seed12345.txt  randomNumber_seed42.txt  rnd_seed1.txt  rnd_seed12345.txt  rnd_seed2147483647.txt  rnd_seed42.txt  z10001.txt
tests/golden/save/: newchar_seed42.sav
tests/golden/scores/: .scores_screen.raw  scores_screen.txt
tests/golden/transcripts/: newchar_seed42.keys  newchar_seed42.raw  newchar_seed42.screen
tools/capture/: README.md  build_ref.sh  capture_identification.sh  capture_rng.sh  compare_masked.py  golden_manifest.py  identification_capture.cpp  item_desc_capture.cpp  play.sh  pty_driver.py  regen.sh  rng_capture.cpp  rng_capture.rs  treasure_4532_capture.cpp
web/: .gitignore  AGENTS.md  CONTENT_CONVENTIONS.md  NOTICE  README.md  astro.config.mjs  biome.json  package.json  tsconfig.json
web/scripts/: check-deploy-workflow.mjs  check-downloads-page.mjs  check-footer-chrome.mjs  check-home-hero.mjs  check-nav-chrome.mjs  check-pages-alignment.mjs  check-pages-docs.mjs  generate-docs-stubs.ts
web/src/components/: DocsIndex.astro  DocsSidebar.astro  SiteFooter.astro  SiteNav.astro  Sources.astro
web/src/components/cves/: CveScreen.astro
web/src/components/home/: HomeScreen.astro
web/src/components/phile/: PhileShell.astro
web/src/config/: appearance.ts  cves.ts  index.ts  site.ts  volumes.ts
web/src/content/: docs-catalog-types.ts  docs-catalog.test.ts  docs-catalog.ts  docs-index.test.ts  docs-nav-tree.ts  docs-nav.test.ts  docs-nav.ts  docs-section-volume-map.ts  docs-sidebar.test.ts  docs-stub-contract.ts  docs-stubs.test.ts
web/src/content/catalog-fragments/: character.ts  dungeon-combat.ts  getting-started.test.ts  getting-started.ts  items.test.ts  items.ts  spells-wizard-reference.test.ts  spells-wizard-reference.ts
web/src/content/catalog-fragments/__tests__/: character.test.ts  dungeon-combat.test.ts
web/src/content/philes/volume-0/: _placeholder.phile  _sources-fixture.phile  index.phile
web/src/content/philes/volume-0/getting-started/: contributing.phile  differences.phile  install.phile  playing.phile
web/src/content/philes/volume-1/character/: attributes.phile  classes.phile  experience.phile  races.phile  social-class-dwarves-trolls.phile  social-class-elves.phile  social-class-humanoids.phile  social-class-smallfolk.phile  social-class.phile
web/src/content/philes/volume-2/dungeon/: city.phile  haggling.phile  stores.phile  traps.phile  underground.phile
web/src/content/philes/volume-2/locations/: city.phile  haggling.phile  stores.phile  traps.phile  underground.phile
web/src/content/philes/volume-3/combat/: armor-class.phile  bashing.phile  damage.phile  hit-probability.phile  monster-attacks.phile  monsters.phile
web/src/content/philes/volume-4/items/: amulets.phile  armor-artifacts.phile  armor.phile  books.phile  diggers-and-misc.phile  food.phile  gems.phile  overview.phile  potions.phile  rings.phile  scrolls.phile  special-properties.phile  staves.phile  wands.phile  weapons.phile  (+1 more)
web/src/layouts/base/: BaseLayout.astro
web/src/layouts/textmode/: TextmodeLayout.astro
web/src/modules/: paths.ts
web/src/modules/cves/: render.ts
web/src/modules/philes/: repository.ts  routing.ts  schema.test.ts  schema.ts  sources.test.ts  sources.ts
web/src/modules/seo/: xml.ts
web/src/modules/textmode/core/: css-vars.ts  html.ts
web/src/modules/volumes/: repository.ts
web/src/pages/: downloads.astro  index.astro
web/src/pages/docs/: [...slug].astro  index.astro
web/src/styles/: global.css
web/src/styles/modules/: cjk.css  cves.css  docs-sidebar.css  home.css  nav.css
(+11 files in other folders)
