[package]
name = "umoria"
version = "5.7.15" # mirror CURRENT_VERSION_* in src/version.rs
edition = "2021"
rust-version = "1.81" # lint attribute reasons; LazyLock available since 1.80
license = "GPL-3.0-or-later"
publish = false
exclude = ["data/"]

[lib]
name = "umoria"
path = "src/lib.rs"

[[bin]]
name = "umoria" # CLI / default game.sav
path = "src/main.rs"

[[bin]]
name = "rng_capture"
path = "tools/capture/rng_capture.rs"

[dependencies]
ncurses = "6.0.1" # thin FFI over system ncurses
libc = "0.2" # select()/FD_SET, write(), getlogin/getpwuid/getuid/setuid/getgid for the non-curses helpers

[dev-dependencies]
ncurses = "6.0.1" # integration tests link-check ncurses directly
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
portable-pty = "0.8"
vt100 = "0.15"

[features]
default = []
differential_live = []

[profile.release]
# Keep Rust release defaults (opt-level = 3). Do NOT enable settings that change
# integer/overflow semantics; gameplay uses explicit wrapping ops.

[profile.dev]
# overflow-checks stay ON in dev by default; use explicit wrapping_*/as casts
# where the game relies on wrap/truncation, so silent wraps never hide bugs.

# ---------------------------------------------------------------------------
# Lint policy: FFI unsafe is required; truncating `as` casts are intentional
# for classic Umoria integer widths and are allowed rather than denied.
# ---------------------------------------------------------------------------
[lints.rust]
# ncurses/libc FFI requires unsafe; do not forbid. Prefer scoped unsafe blocks.
missing_abi = "deny"
unsafe_op_in_unsafe_fn = "deny"

[lints.clippy]
# Lint groups (priority -1 so individual overrides take precedence)
correctness = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
style = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

# Pedantic overrides — allow these commonly noisy lints
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
wildcard_imports = "allow"
return_self_not_must_use = "allow"

# Gameplay modules are large, take many args, and keep parallel match arms /
# bool-heavy structs / stack floor arrays. Do not "fix" by reshaping control
# flow away from established behavior.
too_many_lines = "allow"
too_many_arguments = "allow"
cognitive_complexity = "allow"
match_same_arms = "allow"
struct_excessive_bools = "allow"
large_stack_arrays = "allow"
similar_names = "allow"
doc_markdown = "allow"
# Hex/bitflag tables in `data_*.rs` — digit separators would churn thousands of
# lines without improving clarity of the static tables.
unreadable_literal = "allow"

# Cargo overrides
multiple_crate_versions = "allow"
cargo_common_metadata = "allow"

# Panic prevention (restriction lints)
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
unreachable = "deny"
panic_in_result_fn = "warn"

# Suppress-annotation prevention
allow_attributes_without_reason = "warn"

# Debug/print prevention (restriction lints)
dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "deny"

# Intentional truncating/wrapping `as` casts for classic Umoria integer widths.
as_conversions = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
cast_lossless = "allow"
cast_precision_loss = "allow"
checked_conversions = "allow"
fn_to_numeric_cast_any = "allow"
ptr_as_ptr = "deny"
ref_as_ptr = "deny"
