[package]
name = "umoria"
version = "5.7.15"
edition = "2024"
repository = "https://github.com/12yanogden/umoria"

[[bin]]
name = "umoria"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
directories = "6.0.0"
flate2 = "1.1.2"
tar = "0.4.44"

[build-dependencies]
flate2 = "1.1.2"
tar = "0.4.44"
walkdir = "2.5.0"

[profile.dist]
inherits = "release"
lto = "thin"
